--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" href="./assets/img/h1.png" />
+  <link rel="icon" href="./assets/img/C1.png" />
   <link rel="stylesheet" href="assets/css/styles.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -13,7 +13,7 @@
   <link href="https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css" rel="stylesheet" />
   <!--===== SCROLL REVEAL =====-->
   <script src="https://unpkg.com/scrollreveal"></script>
-  <title>Tushar Sahu</title>
+  <title>Chinmay Mahanta</title>
 </head>
 
 <body>
@@ -22,7 +22,7 @@
     <nav class="nav bd-grid">
       <div>
         <!-- &#60;&#62; -->
-        <a href="#home" class="nav-logo"><img src="./assets/img/h.png" height="70px" alt="H" /></a>
+        <a href="#home" class="nav-logo"><img src="./assets/img/C.png" height="70px" alt="H" /></a>
       </div>
 
       <div class="nav-menu" id="nav-menu">
@@ -59,19 +59,19 @@
     <section class="home bd-grid section" id="home">
       <div class="home-data">
         <h2 class="home-title">
-          Hi 👋,<br />I'am <span class="home-title-color">Tushar Sahu</span><br />
+          Hi 👋,<br />I'am <span class="home-title-color">Chinmay</span><br />
          <span id="jobTitle" >MERN Developer</span> 
         </h2>
 
-        <a href="https://drive.google.com/file/d/1H08bwDDtPX0422uX1svMEH1xnSEEX1Zt/view?usp=sharing" target="_blank"
+        <a href="https://drive.google.com/file/d/1H-PE5VSVTNWdqqqrz70CiLC-gV-MGuJQ/view?usp=share_link" target="_blank"
           class="button">Resume</a>
 
       </div>
 
       <div class="home-social">
-        <a href="https://www.linkedin.com/in/tushar-sahu-3b9a79204/" target="_blank" class="home-social-icon"><i
+        <a href="https://www.linkedin.com/in/chinmaymahanta/" target="_blank" class="home-social-icon"><i
             class="bx bxl-linkedin"></i></a>
-        <a href="https://github.com/tusharsahu2599" target="_blank" class="home-social-icon"><i
+        <a href="https://github.com/chinmaymahanta" target="_blank" class="home-social-icon"><i
             class="bx bxl-github"></i></a>
       </div>
 
@@ -86,11 +86,11 @@
 
       <div class="about-container bd-grid">
         <div class="about-img">
-          <img src="assets/img/profile_1.jpeg" alt="" />
+          <img src="assets/img/1619665865889.jpg" alt="" />
         </div>
 
         <div style="text-align: center">
-          <h2 class="about-subtitle">I'am Tushar Sahu</h2>
+          <h2 class="about-subtitle">I'am Chinmay  Mahanta</h2>
           <p class="about-text">
             Quick learner and an aspiring full-stack web developer with core
             knowledge of MERN stack technology. Looking forward to applying
@@ -99,8 +99,8 @@
           <br />
           
           <p>
-            Drop a mail tksahu1234@gmail.com
-            <i style="color: #4070f4; font-size: 1.2rem; cursor: pointer" class="bx bx-copy" id="copy"></i>
+            Drop a mail chinmaymahanta.work@gmail.com
+            <i style="color: #f50d3b; font-size: 1.2rem; cursor: pointer" class="bx bx-copy" id="copy"></i>
           </p>
         </div>
       </div>
@@ -116,8 +116,8 @@
           <div class="education-names">
             <!-- <i class="bx bxl-html5 skills-icon"></i> -->
             <span class="education-name">Full Stack Web Development</span> 
-            <p class="education-platform ">Masai School</p>
-            <p class="education-duration ">October 2021 - Present</p>
+            <p class="education-platform ">Codehelp.in</p>
+            <p class="education-duration ">Present</p>
 
           </div>
         </div>
@@ -127,9 +127,9 @@
     <div class="education-data">
       <div class="education-names">
         <!-- <i class="bx bxl-html5 skills-icon"></i> -->
-        <span class="education-name">B.Tech(IT)</span>
-        <p class="education-platform ">Chhatrapati Shivaji Institute of Technology, Durg</p>
-        <p class="education-duration ">August 2016 - May 2020</p>
+        <span class="education-name">M.Sc. Computer Science</span>
+        <p class="education-platform ">Utkal University,Bhubaneswar</p>
+        <p class="education-duration ">August 2019 - September 2021</p>
 
       </div>
     </div>
@@ -469,28 +469,28 @@
   
   <footer class="footer section" id="contact">
     <h2 class="section-title">Get in Touch</h2>
-    <p class="footer-title">Tushar Sahu</p>
+    <p class="footer-title">Chinmay Mahanta</p>
     <div class="footer-social">
-      <a href="https://www.linkedin.com/in/tushar-sahu-3b9a79204/" target="_blank" class="footer-icon"><i
+      <a href="https://www.linkedin.com/in/chinmaymahanta/" target="_blank" class="footer-icon"><i
           class="bx bxl-linkedin">
           <br />
           LinkedIn</i></a>
-      <a href="https://twitter.com/Tushars2526" target="_blank" class="footer-icon"><i class="bx bxl-twitter">
+      <a href="" target="_blank" class="footer-icon"><i class="bx bxl-twitter">
           <br />
           Twitter</i></a>
-      <a href="mailto:tksahu1234@gmail.com" target="_blank" class="footer-icon"><i class="bx bx-mail-send">
+      <a href="mailto:chinmaymahanta.work@gmail.com" target="_blank" class="footer-icon"><i class="bx bx-mail-send">
           <br />
           E-mail</i></a>
-      <a href="tel:+91 8839819475" target="_blank" class="footer-icon"><i class="bx bx-phone">
+      <a href="tel:+91 7978009355" target="_blank" class="footer-icon"><i class="bx bx-phone">
           <br />
           Phone</i></a>
-      <a href="https://github.com/tusharsahu2599" target="_blank" class="footer-icon"><i
+      <a href="https://github.com/chinmaymahanta" target="_blank" class="footer-icon"><i
             class="bx bxl-github">
           <br />
           GitHub
           </i></a>
     </div>
-    <p>&#169; 2020 copyright all right reserved</p>
+    <p>&#169; Made by Chinmay Kumar Mahanta </p>
   </footer>
 
   <!--===== MAIN JS =====-->
